Various presentation issues
Calculator menu item always remains highlighted

Why do we have a search?

Search doesn’t do anything

Submit button text overlaps button boundaries

Raise a bug opens in _self not a new _blank window

Why does the about menu option have an ellipsis

Help menu item on the version history page is the wrong font and isn’t
aligned correctly

The about menu item on the about page has
only 2 dots in the ellipsis
is italic
opens in a new _blank window not _self

Having the breadcrumbs as “>” characters in the titles seems unnecessary

Menu header seems to create a lot of empty real estate around the
calculator

Why have an about page for a web application

What has Tao of Testing got to do with this calculator and it doesn’t go
anywhere

--- a/css/theme.css
+++ b/css/theme.css
@@ -52,3 +52,7 @@ body {
 #displayArea, #historyArea{
     margin: 10px 0px;
 }
+
+.menu  {
+  font-family: Georgia, "Times New Roman", Times, serif;
+}
